guide system + general styling improvments finished the guide system, changed the "i" texture to have the middle transparent, changed the mouse cursor on button and color input hover, fixed some spacing errors introduced in the last commit

--- a/style.css
+++ b/style.css
@@ -26,18 +26,28 @@ input[type=color]{
   height: 150px;
   
 }
+input[type=color]:hover{
+  cursor: pointer;
+}
 img{
-  width: 100%;
+  /*width: 100%;*/
   margin-top: 0px;
   /*padding: 0px 20px;
 margin: 0px 0;*/
+height: 60px;
 display: inline-block;
 }
+img:hover{
+  cursor: pointer;
+}
+button:hover{
+  cursor: pointer;
+}
 .main-t-l{
-  width: 85%;
+  width: 95%;
 }
 .main-t-r{
-  width: 15%;
+  width: 5%;
 }
 div{
   border-radius: 10px;
@@ -51,7 +61,7 @@ div{
   border: 0px;
   border-radius: 15px;
   font-family: RaidenFromMetalGearRising;
-  width: 15%;
+  width: 120px;
   height: 20px;
   font-size: 20px;
 }
@@ -69,7 +79,7 @@ div{
   border: 0px;
   border-radius: 15px;
   font-family: RaidenFromMetalGearRising;
-  width: 17%;
+  width: 120px;
   height: 20px;
   font-size: 20px;
 }
@@ -93,7 +103,7 @@ font-size: 20px;
   border: 0px;
   border-radius: 15px;
   font-family: RaidenFromMetalGearRising;
-  width: 40%;
+  width: 200px;
   height: 50px;
   font-size: 20px;
   
@@ -102,11 +112,10 @@ font-size: 20px;
   position: fixed;
   display: none;
   border-radius: 10px;
-background-color: #f2f2f2;
-padding: 20px;
-margin-left: 5px;
-margin-right: 5px;
-}
-#guide-close{
-  align: 20px;
+  background-color: #979797;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px;
+  text-align: center;
 }
